--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      height: 500px; 
+      height: 500px;
     }
-	
-	.container-input{
-	  border-radius: 10px;
+    .container-input {
+      border-radius: 10px;
       box-shadow: 0 0 10px #ffffff;
-	}
+    }
     .content {
       flex: 1;
       overflow-y: auto;
@@ -53,18 +52,9 @@
       padding: 10px;
       font-family: monospace;
     }
-	.input-area input:hover {
-      flex: 1;
-      background-color: #000;
-      color: #00ff00;
-      border: none;
-      padding: 10px;
-      font-family: monospace;
-    }
     .buttons-container {
       display: flex;
       margin-top: 10px;
-      display: flex;
       justify-content: center;
       gap: 15px;
     }
@@ -97,44 +87,38 @@
     .button.green i {
       color: #ffffff;
     }
-	.button i {
-    font-size: 20px;
-    color: #C8956C;
-    }
   </style>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 </head>
 <body>
   <div class="terminal">
     <div class="content" id="terminalContent">
-      <!-- Las líneas se escribirán dinámicamente aquí -->
     </div>
-	<div class="container-input"> 
-    <div class="input-area" id="inputArea">
-      <input type="text" placeholder="Send a shell command to the simulator..." />
+    <div class="container-input">
+      <div class="input-area" id="inputArea">
+        <input type="text" placeholder="Send a shell command to the simulator..." />
+      </div>
+      <div class="buttons-container" id="buttonsContainer">
+        <div class="button green" id="executeButton">
+          <i class="fas fa-arrow-left"></i>
+        </div>
+        <div class="button">
+          <i class="fas fa-sync-alt"></i>
+        </div>
+        <div class="button">
+          <i class="fas fa-copy"></i>
+        </div>
+        <div class="button">
+          <i class="fas fa-tools"></i>
+        </div>
+      </div>
     </div>
-    <div class="buttons-container" id="buttonsContainer">
-      <div class="button green">
-        <i class="fas fa-arrow-left"></i>
-      </div>
-      <div class="button">
-        <i class="fas fa-sync-alt"></i>
-      </div>
-      <div class="button">
-        <i class="fas fa-copy"></i>
-      </div>
-      <div class="button">
-        <i class="fas fa-tools"></i>
-      </div>
-    </div>
-	<br/>
-	</div>
   </div>
 
   <script>
     const lines = [
       "<Human>",
-	  "How are you today?",
+      "How are you today?",
       "<Simulator>",
       "i am not today",
       "i am a flickering signal",
@@ -148,8 +132,8 @@
     ];
 
     const terminalContent = document.getElementById("terminalContent");
-    const inputArea = document.getElementById("inputArea");
-    const buttonsContainer = document.getElementById("buttonsContainer");
+    const executeButton = document.getElementById("executeButton");
+    let isAnimationStarted = false;
 
     function typeLine(line) {
       return new Promise((resolve) => {
@@ -163,9 +147,9 @@
           i++;
           if (i === line.length) {
             clearInterval(interval);
-            setTimeout(resolve, 10); // Pausa antes de la siguiente línea
+            setTimeout(resolve, 10); 
           }
-        }, 5); // Velocidad de escritura
+        }, 5); 
       });
     }
 
@@ -173,11 +157,14 @@
       for (let i = 0; i < lines.length; i++) {
         await typeLine(lines[i]);
       }
-
     }
 
-    // Iniciar la animación de escritura
-    typeLines(lines);
+    executeButton.addEventListener("click", () => {
+      if (!isAnimationStarted) {
+        isAnimationStarted = true;
+        typeLines(lines);
+      }
+    });
   </script>
 </body>
 </html>
